--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/devopsdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/springdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
@@ -12,9 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 logging.level.root=INFO
 logging.level.tn.esprit.service=INFO
 logging.level.tn.esprit.repository=INFO
-logging.file=C:\Users\mbdioui\Desktop\devops\Timesheet-spring-boot-core-data-jpa-mvc-REST-1\springboot-devops.log
-logging.file.max-size=100KB
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss}  - %-5level- %logger{36} - %msg%n
+logging.file=C:\logs\springboot.log
+  
  
 #Web configuration
 spring.mvc.view.prefix=/views/
@@ -23,6 +22,6 @@ spring.mvc.view.suffix=.jsp
 #Server configuration
 server.servlet.context-path=/SpringMVC
 spring.mvc.servlet.path=/servlet
-server.port=8081
+server.port=8082
 
 
