--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
-	<artifactId>Timesheet-spring-boot-core-data-jpa-mvc-REST-1</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Timesheet-spring-boot-core-data-jpa-mvc-REST-1</name>
+	<artifactId>fivedirectionsdevops</artifactId>
+	<version>1.0</version>
+	<packaging>jar</packaging>
+	<name>fivedirectionsdevops</name>
 	<description>Timesheet-spring-boot-core-data-jpa-mvc-REST-1</description>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -61,13 +60,21 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
+<repositories>
+<repository>
 
+<id> deploymentRepo </id>
+<url> http://localhost:8081/repository/maven-releases/ </url>
+
+</repository>
+</repositories>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
 		</plugins>
 	</build>
 
